--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div  style="color:#00AA00;">
 	<div><img src="BZ1912061340483784.jpg" width="149" height="210" alt=""/></div>
-    <span >梁裕
+    <span >杨晓胜
     <br/>
     部门：<span>工学院</span>
     <div style="color:#000000">原因:申请外出后回来</div>
