--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <br/>
     部门：<span>工学院</span>
     <!--<div style="color:#000000">原因:申请外出后回来</div>-->
-    <br/><span >您可以出校</span>
+    <br/>
+	    <span >您可以出校</span>
     <br/>
     <img src="right.jpg" width="150" height="144" alt=""/>
   <!--  <br/>当前时间：<span></span>-->
